fixed overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,9 +40,7 @@ main {
 	margin-top: 7vh;
 	z-index: -2;
 }
-section {
-	overflow-x: hidden;
-}
+
 a {
 	text-decoration: none;
 }
